FullQa New/src/objects/Returns_Cancellation__c.object
<CustomObject>
    <fields>
        <fullName>AccountCloseonBehalf__c</fullName>
        <description>The purpose is to capture if customer would like Avalara to close out the accounts on their behalf.</description>
        <inlineHelpText>The purpose is to capture if customer would like Avalara to close out the accounts on their behalf.</inlineHelpText>
        <label>AccountCloseonBehalf</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Account__c</fullName>
        <formula>Cancellation_Name__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancellation Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_ID__c</fullName>
        <label>Cancellation ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to cancellation record.</description>
        <inlineHelpText>Refer to cancellation record.</inlineHelpText>
        <label>Cancellation Name</label>
        <referenceTo>Cancellation__c</referenceTo>
        <relationshipLabel>Returns Cancellations</relationshipLabel>
        <relationshipName>Returns_Cancellations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <description>The purpose of this field is to capture the type of returns cancellation is being processed.</description>
        <inlineHelpText>The purpose of this field is to capture the type of returns cancellation is being processed.</inlineHelpText>
        <label>Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvaTax Returns</fullName>
                </value>
                <value>
                    <fullName>SST</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerComments__c</fullName>
        <description>Capture customer comments</description>
        <label>CustomerComments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <description>The purpose of this field is to capture the date the returns cancellation is captured.</description>
        <inlineHelpText>The purpose of this field is to capture the date the returns cancellation is captured.</inlineHelpText>
        <label>Date Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinalonBehalf__c</fullName>
        <description>The purpose is to capture if customer would like Avalara to mark the returns &quot;Final&quot; on their behalf to indicate their business has been closed.</description>
        <inlineHelpText>The purpose is to capture if customer would like Avalara to mark the returns &quot;Final&quot; on their behalf to indicate their business has been closed.</inlineHelpText>
        <label>FinalonBehalf</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Filing_Month__c</fullName>
        <description>The purpose of this field is to capture the last month the customer is requesting Avalara file.</description>
        <inlineHelpText>The purpose of this field is to capture the last month the customer is requesting Avalara file.</inlineHelpText>
        <label>Last Filing Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January Returns due February</fullName>
                </value>
                <value>
                    <fullName>February Returns due March</fullName>
                </value>
                <value>
                    <fullName>March Returns Due April</fullName>
                </value>
                <value>
                    <fullName>April Returns Due May</fullName>
                </value>
                <value>
                    <fullName>May Returns Due June</fullName>
                </value>
                <value>
                    <fullName>June Returns Due July</fullName>
                </value>
                <value>
                    <fullName>July Returns Due August</fullName>
                </value>
                <value>
                    <fullName>August Returns Due September</fullName>
                </value>
                <value>
                    <fullName>September Returns Due October</fullName>
                </value>
                <value>
                    <fullName>October Returns November</fullName>
                </value>
                <value>
                    <fullName>November Returns December</fullName>
                </value>
                <value>
                    <fullName>December Returns January</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Filing_Year__c</fullName>
        <description>The year of the last filing month to be completed by Avalara.</description>
        <inlineHelpText>The year of the last filing month to be completed by Avalara.</inlineHelpText>
        <label>Last Filing Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <description>The purpose of this field is to identify reason for cancellation.</description>
        <inlineHelpText>The purpose of this field is to identify reason for cancellation.</inlineHelpText>
        <label>Reason for Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Aquired / Restructured</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_by_Name__c</fullName>
        <description>Capture name of person requesting cancellation.</description>
        <inlineHelpText>Capture name of person requesting cancellation.</inlineHelpText>
        <label>Requested by Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_by_Phone__c</fullName>
        <description>Capture phone number of person requesting cancellation</description>
        <inlineHelpText>Capture phone number of person requesting cancellation</inlineHelpText>
        <label>Requested by Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_by_Title__c</fullName>
        <description>Capture title of person requesting cancellation.</description>
        <inlineHelpText>Capture title of person requesting cancellation.</inlineHelpText>
        <label>Requested by Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <description>The purpose of this field is to identify the status of the returns cancellation submissions.  Users assigned to review and &quot;do something&quot; with the data must use this field to identify.  This will drive reporting.</description>
        <inlineHelpText>The purpose of this field is to identify the status of the returns cancellation submissions.  Users assigned to review and &quot;do something&quot; with the data must use this field to identify.  This will drive reporting.</inlineHelpText>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Not Valid</fullName>
                </value>
                <value>
                    <fullName>Request Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Returns Cancellation</label>
    <nameField>
        <displayFormat>RT-CNCL-{00000000}</displayFormat>
        <label>Returns Cancellation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns Cancellations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>